moving stuff around mostly
Signed-off-by: Matt Raffel <matt.raffel@gmail.com>

--- a/src/cli/ArcusCli.csproj
+++ b/src/cli/ArcusCli.csproj
@@ -35,4 +35,7 @@
   <ItemGroup>
     <Protobuf Include="ActionsService.proto" GrpcServices="Client" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\grpc\grpc.csproj" />
+  </ItemGroup>
 </Project>
