Make list work (#4)
* moving stuff around mostly

Signed-off-by: Matt Raffel <matt.raffel@gmail.com>

* implements list function

Signed-off-by: Matt Raffel <matt.raffel@gmail.com>

* implements list function

Signed-off-by: Matt Raffel <matt.raffel@gmail.com>

* code review changes

Signed-off-by: Matt Raffel <matt.raffel@gmail.com>

---------

Signed-off-by: Matt Raffel <matt.raffel@gmail.com>

--- a/src/cli/ArcusCli.csproj
+++ b/src/cli/ArcusCli.csproj
@@ -33,6 +33,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="ActionsService.proto" GrpcServices="Client" />
+    <ProjectReference Include="..\grpc\grpc.csproj" />
   </ItemGroup>
 </Project>
