--- a/src/windowssvc/ArcusWinSvc.csproj
+++ b/src/windowssvc/ArcusWinSvc.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="SharpGrabber" Version="2.1.1" />
     <PackageReference Include="SharpGrabber.Converter" Version="1.1.0" />
     <PackageReference Include="SharpGrabber.YouTube" Version="1.5.0" />
+    <PackageReference Include="YoutubeExplode" Version="6.4.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\grpc\grpc.csproj" />
