--- a/src/mobile/app/src/main/AndroidManifest.xml
+++ b/src/mobile/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".StandardActivity"
             android:exported="false" />
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
